# dataflex-lsp

./: Cargo.toml  README.md
doc/: development.md  features.md
src/: dataflex_document.rs  dataflex_parser.rs  index.rs  language_server.rs  logging.rs  main.rs  settings.rs
src/dataflex_document/: code_completion.rs  code_lens.rs  document_context.rs  line_map.rs  parameter_info.rs  reference_resolver.rs  scope_balancer.rs  symbol_declaration.rs  syntax_map.rs  tree_cursor.rs
src/index/: index_file.rs  index_symbol.rs  indexer.rs  indexer.scm  lookup_tables.rs  symbols_diff.rs  workspace.rs
