[package]
name = "dataflex-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
dirs = "5.0.1"
line-span = "0.1.5"
log = "0.4.22"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
simplelog = "0.12.2"
streaming-iterator = "0.1.9"
tokio = { version = "1.43.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.24.7"
tree-sitter-dataflex = { version = "0.1.0", path = "../tree-sitter-dataflex" }
