[package]
name = "dataflex-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
dirs = "5.0.1"
line-span = "0.1.5"
log = "0.4.22"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
multimap = "0.10.1"
rayon = "1.10.0"
rust-ini = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simplelog = "0.12.2"
streaming-iterator = "0.1.9"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.25.1"
tree-sitter-dataflex = { version = "0.1.0", path = "../tree-sitter-dataflex" }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
